@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-01T08:12:41Z",
+  "count" : 12,
+  "count_minmax" : [ 12, 12 ],
+  "count_prev_day_inc" : 12,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 0
+}
