@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-31T16:09:23Z",
+  "timestamp" : "2022-04-01T08:12:41Z",
   "count_outdated" : 546,
   "uniques_outdated" : 35,
-  "count" : 841,
-  "uniques" : 45,
+  "count" : 853,
+  "uniques" : 46,
   "views" : [
     {
       "timestamp": "2022-03-21T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 0, 16 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-01T00:00:00Z",
+      "count": 12,
+      "count_minmax": [ 12, 12 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
