@@ -1,5 +1,5 @@
 {
-  "count": 295,
+  "count": 307,
   "uniques": 1,
   "views": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-03-31T00:00:00Z",
       "count": 16,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-01T00:00:00Z",
+      "count": 12,
       "uniques": 1
     }
   ]
