@@ -1,3 +1,9 @@
+2022-04-01T08:12:41Z:
+* notice: last 14d: all unq: 307 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 841 45
+* notice: next accum: outdated-all outdated-unq / all unq: 546 35 / 853 46
+* notice: prev json diff // prev day diff: unq all: +1 +12 / -0 -0 // +1 +12 / -0 -0
+
 2022-03-31T16:09:23Z:
 * notice: last 14d: all unq: 295 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 546 35 / 837 45
